- Added distributions to the release system to better support mobile apps
- Update activity entries to reference issues by their short ID.
- Added user notifications settings for deploy emails.

Schema Changes
~~~~~~~~~~~~~~

- Added ``Distribution`` model
- Added ``ReleaseFile.dist`` column
- Added ``UserOption.organization`` column
- Added ``CommitAuthor.external_id`` column

Version 8.15
------------

- Added overview for a release to view a breakdown of files changes, commit authors, new issues, and issues resolved
- Refactor usage of ``sentry.app`` to use individual modules.
- Implemented ``--concurrency`` on ``sentry cleanup``
- Added support for the new symbol server system to support native SDKs better.
- Added deploy email
- Added OAuth2 support to the web API.
- Simplified management of secondary email addresses.
- Fixed an issue where changing primary email address would remove the pre-existing verified email.
- Disallow duplicating primary emails for users moving forward.
- Resolve issues when commits with ``Fixes SHORTID`` are included in releases
- Added support for associating debug symbols with iTunes applications and builds.
- Added the ability to claim unassigned issues when resolving them.

API Changes
~~~~~~~~~~~

- Added CommitFileChangeEndpoint
- Added IssuesResolvedInReleaseEndpoint
- Added ReleaseDeploysEndpoint
- Added OrganizationReleaseCommitsEndpoint
- Added EventFileCommittersEndpoint
- Added ReleaseDeploysEndpoint

Schema Changes
~~~~~~~~~~~~~~

- Added ``Deploy`` model
- Added ``ApiApplication`` model
- Added ``ApiAuthorization`` model
- Added ``ApiGrant`` model
- Removed ``ApiToken.key`` column
- Added ``ApiToken.application`` column
- Added ``ApiToken.refresh_token`` column
- Added ``ApiToken.expires_at`` column
- Added ``ApiToken.scope_list`` column
- Added ``ApiKey.scope_list`` column
- Added ``ReleaseHeadCommit`` model

Security
~~~~~~~~

- Added encryption to the following fields:
  - AuthIdentity.data
  - AuthProvider.config