@@ -14,6 +14,10 @@ Schema Changes
 - Added ``UserOption.organization`` column
 - Added ``CommitAuthor.external_id`` column
 
+API Changes
+~~~~~~~~~~~
+- Deprecate `dateStarted` in releases endpoints
+
 Version 8.15
 ------------
 
